k8s/infrastructure/auth/authentik/outpost.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-proxy
  namespace: auth
  labels:
    app.kubernetes.io/instance: proxy-outpost
    app.kubernetes.io/managed-by: goauthentik.io
    app.kubernetes.io/name: authentik-proxy
    app.kubernetes.io/version: 2021.12.3
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: proxy-outpost
    app.kubernetes.io/managed-by: goauthentik.io
    app.kubernetes.io/name: authentik-proxy
  ports:
    - name: http
      port: 9000
      targetPort: http
      protocol: TCP
    - name: https
      port: 9443
      targetPort: https
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-proxy
  namespace: auth
  labels:
    app.kubernetes.io/instance: proxy-outpost
    app.kubernetes.io/managed-by: goauthentik.io
    app.kubernetes.io/name: authentik-proxy
    app.kubernetes.io/version: 2021.12.3
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: proxy-outpost
      app.kubernetes.io/managed-by: goauthentik.io
      app.kubernetes.io/name: authentik-proxy
      app.kubernetes.io/version: 2021.12.3
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: proxy-outpost
        app.kubernetes.io/managed-by: goauthentik.io
        app.kubernetes.io/name: authentik-proxy
        app.kubernetes.io/version: 2021.12.3
    spec:
      containers:
        - name: proxy
          image: ghcr.io/goauthentik/proxy:2025.4.0
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
              name: http
              protocol: TCP
            - containerPort: 9443
              name: https
              protocol: TCP
